packages/dartcv/src/gapi/gapi.h

// typedef void (*GMatCallback)(GMat *);
// typedef void (*MatCallback)(void *);

CvStatus *gapi_GMat_New_Empty(GMat *rval);
CvStatus *gapi_GMat_New_FromMat(Mat mat, GMat *rval);
void gapi_GMat_Close(GMatPtr mat);
CvStatus *gapi_GScalar_New_Empty(GScalar *rval);
CvStatus *gapi_GScalar_New_FromScalar(Scalar scalar, GScalar *rval);
CvStatus *gapi_GScalar_New_FromDouble(double v0, GScalar *rval);
void gapi_GScalar_Close(GScalarPtr scalar);
CvStatus *gapi_GComputation_New(GMat in, GMat out, GComputation *rval);
CvStatus *gapi_GComputation_New_1(GMat in, GScalar out, GComputation *rval);
CvStatus *gapi_GComputation_New_2(GMat in1, GMat in2, GMat out, GComputation *rval);
CvStatus *gapi_GComputation_New_3(GMat in1, GMat in2, GScalar out, GComputation *rval);
void gapi_GComputation_Close(GComputationPtr self);
CvStatus *gapi_GComputation_apply(GComputation self, Mat in,
                                  CvCallback_1 callback /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_1(GComputation self, Mat in, Scalar *out /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_2(GComputation self, Mat in1, Mat in2,
                                    Mat *out /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_3(GComputation self, Mat in1, Mat in2,
                                    Scalar *out /*TODO: GCompileArgs &&args={}*/);
// CvStatus *VecGMat_NewFromVec(VecMat vec, VecGMat *rval);

CvStatus *Prim_from_Circle(CvPoint center, Scalar color, int lt, int radius, int shift, int thick, Prim *rval);
CvStatus *Prim_from_FText(char *text, int text_len, CvPoint org, int fh, Scalar color, Prim *rval);
CvStatus *Prim_from_Image(CvPoint org, Mat img, Mat alpha, Prim *rval);
CvStatus *Prim_from_Line(Scalar color, int lt, CvPoint pt1, CvPoint pt2, int shift, int thick, Prim *rval);
CvStatus *Prim_from_Mosaic(int cellSz, int decim, CvRect mos, Prim *rval);
CvStatus *Prim_from_Poly(VecPoint points, Scalar color, int thick, int lt, int shift, Prim *rval);
CvStatus *Prim_from_Rect(Scalar color, int lt, CvRect rect, int shift, int thick, Prim *rval);
CvStatus *Prim_from_Text(bool bottom_left_origin, Scalar color, int ff, double fs, int lt, CvPoint org,
                         char *text, int text_len, int thick, Prim *rval);
CvStatus *VecPrim_New(VecPrim *rval);
CvStatus *VecPrim_NewFromPointer(Prim *points, int length, VecPrim *rval);
CvStatus *VecPrim_NewFromVec(VecPrim vec, VecPrim *rval);
CvStatus *VecPrim_At(VecPrim vec, int idx, Prim *rval);
CvStatus *VecPrim_Append(VecPrim vec, Prim p);
CvStatus *VecPrim_Size(VecPrim vec, int *rval);
void VecPrim_Close(VecPrimPtr vec);
CvStatus *GArrayGArrayPoint_FromVec(VecVecPoint points, GArrayGArrayPoint *rval);
CvStatus *GArrayVec4i_FromVec(VecVec4i v, GArrayVec4i *rval);
CvStatus *GArrayPoint_FromVec(VecPoint v, GArrayPoint *rval);
CvStatus *GArrayPoint2f_FromVec(VecPoint v, GArrayPoint2f *rval);
CvStatus *GArrayPoint2i_FromVec(VecPoint v, GArrayPoint2i *rval);
CvStatus *GArrayPoint2d_FromVec(VecPoint v, GArrayPoint2d *rval);
CvStatus *GArrayPoint3f_FromVec(VecPoint v, GArrayPoint3f *rval);
CvStatus *GArrayPoint3d_FromVec(VecPoint v, GArrayPoint3d *rval);
CvStatus *GArrayPoint3i_FromVec(VecPoint v, GArrayPoint3i *rval);
CvStatus *GArrayPrim_FromVec(VecPrim v, GArrayPrim *rval);
CvStatus *gapi_Laplacian(const GMat src, int ddepth, int ksize, double scale, double delta, int borderType,
                         GMat *rval);
// Graph API: Converting image from one color space to another
CvStatus *gapi_BayerGR2RGB(const GMat src_gr, GMat *rval);
CvStatus *gapi_BGR2Gray(const GMat src, GMat *rval);
CvStatus *gapi_BGR2I420(const GMat src, GMat *rval);
CvStatus *gapi_BGR2LUV(const GMat src, GMat *rval);
CvStatus *gapi_BGR2RGB(const GMat src, GMat *rval);
CvStatus *gapi_BGR2YUV(const GMat src, GMat *rval);
CvStatus *gapi_I4202BGR(const GMat src, GMat *rval);
CvStatus *gapi_I4202RGB(const GMat src, GMat *rval);
CvStatus *gapi_LUV2BGR(const GMat src, GMat *rval);
CvStatus *gapi_NV12toBGR(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toBGRp(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toGray(const GMat src_y, const GMat src_uv, GMat *rval);
CvStatus *gapi_NV12toRGB(const GMat src_y, const GMat src_uv, GMat *rval);
// Graph API: Image Feature Detection
CvStatus *gapi_Canny(const GMat image, double threshold1, double threshold2, int apertureSize,
                     bool L2gradient, GMat *rval);
CvStatus *gapi_LUT(const GMat src, const Mat lut, GMat *rval);