lib/src/g/gapi.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:dartcv4/dartcv.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp$1;
import '' as self;

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecVecPoint, ffi.Pointer<GArrayGArrayPoint>)>()
external ffi.Pointer<CvStatus> GArrayGArrayPoint_FromVec(
  VecVecPoint points,
  ffi.Pointer<GArrayGArrayPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2d>)>()
external ffi.Pointer<CvStatus> GArrayPoint2d_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint2d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2f>)>()
external ffi.Pointer<CvStatus> GArrayPoint2f_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint2f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint2i>)>()
external ffi.Pointer<CvStatus> GArrayPoint2i_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint2i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3d>)>()
external ffi.Pointer<CvStatus> GArrayPoint3d_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint3d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3f>)>()
external ffi.Pointer<CvStatus> GArrayPoint3f_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint3f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint3i>)>()
external ffi.Pointer<CvStatus> GArrayPoint3i_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint3i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<GArrayPoint>)>()
external ffi.Pointer<CvStatus> GArrayPoint_FromVec(
  VecPoint v,
  ffi.Pointer<GArrayPoint> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<GArrayPrim>)>()
external ffi.Pointer<CvStatus> GArrayPrim_FromVec(
  VecPrim v,
  ffi.Pointer<GArrayPrim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecVec4i, ffi.Pointer<GArrayVec4i>)>()
external ffi.Pointer<CvStatus> GArrayVec4i_FromVec(
  VecVec4i v,
  ffi.Pointer<GArrayVec4i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CvPoint, Scalar, ffi.Int, ffi.Int, ffi.Int,
        ffi.Int, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Circle(
  CvPoint center,
  Scalar color,
  int lt,
  int radius,
  int shift,
  int thick,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Int, CvPoint,
        ffi.Int, Scalar, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_FText(
  ffi.Pointer<ffi.Char> text,
  int text_len,
  CvPoint org,
  int fh,
  Scalar color,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CvPoint, Mat, Mat, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Image(
  CvPoint org,
  Mat img,
  Mat alpha,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, CvPoint, CvPoint, ffi.Int,
        ffi.Int, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Line(
  Scalar color,
  int lt,
  CvPoint pt1,
  CvPoint pt2,
  int shift,
  int thick,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, CvRect, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Mosaic(
  int cellSz,
  int decim,
  CvRect mos,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, Scalar, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Poly(
  VecPoint points,
  Scalar color,
  int thick,
  int lt,
  int shift,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Scalar, ffi.Int, CvRect, ffi.Int, ffi.Int, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Rect(
  Scalar color,
  int lt,
  CvRect rect,
  int shift,
  int thick,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Bool,
        Scalar,
        ffi.Int,
        ffi.Double,
        ffi.Int,
        CvPoint,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> Prim_from_Text(
  bool bottom_left_origin,
  Scalar color,
  int ff,
  double fs,
  int lt,
  CvPoint org,
  ffi.Pointer<ffi.Char> text,
  int text_len,
  int thick,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPrim, Prim)>()
external ffi.Pointer<CvStatus> VecPrim_Append(
  VecPrim vec,
  Prim p,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPrim, ffi.Int, ffi.Pointer<Prim>)>()
external ffi.Pointer<CvStatus> VecPrim_At(
  VecPrim vec,
  int idx,
  ffi.Pointer<Prim> rval,
);

@ffi.Native<ffi.Void Function(VecPrimPtr)>()
external void VecPrim_Close(
  VecPrimPtr vec,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<VecPrim>)>()
external ffi.Pointer<CvStatus> VecPrim_New(
  ffi.Pointer<VecPrim> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<Prim>, ffi.Int, ffi.Pointer<VecPrim>)>()
external ffi.Pointer<CvStatus> VecPrim_NewFromPointer(
  ffi.Pointer<Prim> points,
  int length,
  ffi.Pointer<VecPrim> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<VecPrim>)>()
external ffi.Pointer<CvStatus> VecPrim_NewFromVec(
  VecPrim vec,
  ffi.Pointer<VecPrim> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> VecPrim_Size(
  VecPrim vec,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BGR2Gray(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BGR2I420(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BGR2LUV(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BGR2RGB(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BGR2YUV(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_BayerGR2RGB(
  GMat src_gr,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Double, ffi.Double, ffi.Int, ffi.Bool, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_Canny(
  GMat image,
  double threshold1,
  double threshold2,
  int apertureSize,
  bool L2gradient,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Void Function(GComputationPtr)>()
external void gapi_GComputation_Close(
  GComputationPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GComputation>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_New(
  GMat in$,
  GMat out,
  ffi.Pointer<GComputation> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GScalar, ffi.Pointer<GComputation>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_New_1(
  GMat in$,
  GScalar out,
  ffi.Pointer<GComputation> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GMat, GMat, ffi.Pointer<GComputation>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_New_2(
  GMat in1,
  GMat in2,
  GMat out,
  ffi.Pointer<GComputation> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GMat, GScalar, ffi.Pointer<GComputation>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_New_3(
  GMat in1,
  GMat in2,
  GScalar out,
  ffi.Pointer<GComputation> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GComputation, Mat, imp$1.CvCallback_1)>()
external ffi.Pointer<CvStatus> gapi_GComputation_apply(
  GComputation self,
  Mat in$,
  imp$1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GComputation, Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_apply_1(
  GComputation self,
  Mat in$,
  ffi.Pointer<Scalar> out,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GComputation, Mat, Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_apply_2(
  GComputation self,
  Mat in1,
  Mat in2,
  ffi.Pointer<Mat> out,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GComputation, Mat, Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> gapi_GComputation_apply_3(
  GComputation self,
  Mat in1,
  Mat in2,
  ffi.Pointer<Scalar> out,
);

@ffi.Native<ffi.Void Function(GMatPtr)>()
external void gapi_GMat_Close(
  GMatPtr mat,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_GMat_New_Empty(
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_GMat_New_FromMat(
  Mat mat,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Void Function(GScalarPtr)>()
external void gapi_GScalar_Close(
  GScalarPtr scalar,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<GScalar>)>()
external ffi.Pointer<CvStatus> gapi_GScalar_New_Empty(
  ffi.Pointer<GScalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Double, ffi.Pointer<GScalar>)>()
external ffi.Pointer<CvStatus> gapi_GScalar_New_FromDouble(
  double v0,
  ffi.Pointer<GScalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Scalar, ffi.Pointer<GScalar>)>()
external ffi.Pointer<CvStatus> gapi_GScalar_New_FromScalar(
  Scalar scalar,
  ffi.Pointer<GScalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_I4202BGR(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_I4202RGB(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, Mat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_LUT(
  GMat src,
  Mat lut,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_LUV2BGR(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, ffi.Double,
        ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_Laplacian(
  GMat src,
  int ddepth,
  int ksize,
  double scale,
  double delta,
  int borderType,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_NV12toBGR(
  GMat src_y,
  GMat src_uv,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_NV12toBGRp(
  GMat src_y,
  GMat src_uv,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_NV12toGray(
  GMat src_y,
  GMat src_uv,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_NV12toRGB(
  GMat src_y,
  GMat src_uv,
  ffi.Pointer<GMat> rval,
);
